public/modules/core/css/core.css
/* Colors ////
/ Red: D45C46|C65344
/ Footer green: CEFCB9
/ Goldish: F7E366
/ Tan: F9CE80
/ Off white: FCF0E3
Shadow:-webkit-box-shadow: 0 5px 6px -6px #999;
       -moz-box-shadow: 0 5px 6px -6px #999;
            box-shadow: 0 5px 6px -6px #999;
};
////////////*/
@import url(http://fonts.googleapis.com/css?family=Raleway);

body {
	overflow-x: hidden;
	background-color: #FCF0E3;
}

p, body {
	font-family: 'Raleway', sans-serif;
	font-size: 1.4em;
	letter-spacing: 0.5px;
}

a {
	text-decoration: none;
	font-family: 'Raleway', sans-serif;
	font-size: 1.1em;
	letter-spacing: 0.5px;
	color: #777;

	-webkit-transition: color 550ms ease-out;
    -moz-transition: color 550ms ease-out;
    -o-transition: color  550ms ease-out;
    transition: color  550ms ease-out;
}

a:hover{
	cursor: pointer;
	color: black ;
	text-decoration: none;

}
h1, h2, h3, h4{
	font-family: 'Novecento Wide Medium', sans-serif;
	text-transform: uppercase;

}

ul {
	list-style: none;
}

hr {
	clear: both;
}

.hidden {
	display: none; 
}

.top-space {
	top: 20px
}

.jumbotron {
	background-image:
	 linear-gradient(
          rgba(0, 0, 0, 0.5),
          rgba(0, 0, 0, 0.5)
        ), 
	 url(../img/food.jpg);
	background-position: center center;
  	background-repeat: no-repeat;
  	background-attachment: fixed;
  	background-size: cover;
  	padding-bottom: 0px; 
	margin: -50px -20vw 25px -20vw;
}

 

span.letter-space{
	display: inline;
	margin-left: 3px;
}

.navbar{
	background: #D45C46!important;
	-webkit-box-shadow: 0 5px 6px -7px #000;
       -moz-box-shadow: 0 5px 6px -7px #000;
            box-shadow: 0 5px 6px -7px #000;

}

span.icon-bar{
	background-color: blue;
}
.h3-header{
	margin-bottom: 50px;
	margin-top: 50px;
}


.navbar-inverse .navbar-nav > li > a{
	color: #FCF0E3;
}


.navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover{
	color: black;
}

.nav .open > a, .nav .open > a:hover, .nav .open > a:focus{
	border-color: #F7E366;
}

.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form{


	border-color:#C65344;
}
.navbar-inverse .navbar-toggle{
	border-color: transparent!important;
}


.navbar-inverse{
	border: transparent;
}

#logo{

	height: auto;
	margin:-10px 0 0 0;

}

.badge {
	position: absolute;
	top: 0px;
	font-family: 'Raleway', sans-serif;
	font-size: 1.2em;
	background-color: #56B156;
	border-radius: 0px;
}


.content {
	margin-top: 80px;
}
.undecorated-link:hover {
	text-decoration: none;
}
[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
	display: none !important;
}
.ng-invalid.ng-dirty {
	border-color: #FA787E;
}
.ng-valid.ng-dirty {
	border-color: #78FA89;
}
.browsehappy.jumbotron.hide,
body.ng-cloak
{
	display: block;
}


h1.jumbo{
	color: rgba(255,255,255,0.9);
   	position: absolute; 
   	left: 0; 
   	width: 100%; 
   	text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

h1.jumbo span{
	display:block;
}

.food-title {
	background: rgba(247,227,102,.8);
	padding: 10px 10px 10px 10px;
	overflow: hidden;
}

.list-group-item {
	height: 230px;
}

.image-in-recipe {
	float: left;
	width: 50%;
	padding: 5px 60px 0px 0px;
}

@media (max-width: 991px) {
	.image-in-recipe {
		float: left;
		width: 100%;
		padding: 0px 0px 0px 0px;
	}
}

.prep-time {
	background: rgba(247,227,102,.8);
	width: 50%;
	float: left;
	padding: 10px 10px 10px 10px;
	overflow: hidden;
}

.cook-time {
	background: rgba(247,227,102,.8);
	width: 50%;
	float: left;
	padding: 10px 10px 10px 10px;
	overflow: hidden;
}







/*Profile*/

hr.hidden{
	
}


@media (max-width: 991px) {
	.image-in-recipe {
		float: left;
		width: 100%;
		padding: 0px 0px 0px 0px;
	}
	.prep-time {
		background: rgba(247,227,102,1);
		width: 100%;
	}
	.cook-time {
		background: rgba(247,227,102,1);
		width: 100%;
		position: relative;
		top: -15px;
	}
}

.all-comments {
	padding-top: 20px;
}

.single-comments {
	padding: 30px;
	position: relative;
	left: 3%;
	background-color: #FCFAF4;
	height: auto;
	min-height: 260px;
	border-radius: 2px;
}

footer {
	height: auto;
	min-height: 260px;
	width: 100vw;
	background: rgba(247,227,102,.3);
	margin-top: 50px;
	padding: 40px;
}


footer a{

}

footer a:hover{
	color: #D45C46;
}

	/* Custom, iPhone Retina */
	@media only screen and (min-width : 320px){

  		h1.jumbo{
		   	top: 7em; 
		   	font-size: 7vw ;

		}

		.jumbotron {
			max-height: 300px;
		}
		#logo{
  			width: 7em;
 			padding: 7px 0 0 0;
  		}
 
	}
 

 /* Extra Small Devices, Phones */
	@media only screen and (min-width : 480px){
		h1.jumbo{
		   	top: 200px; 
		}
		

		.jumbotron {
			height: 300px;
		}
 
 		.food-title {
			background: rgba(247,227,102,.8);
			padding: 10px 10px 10px 10px;
			overflow: hidden;
			max-width: 420px;
		}
 
	}

 
	/* Small Devices, Tablets */


	@media only screen and (max-width : 768px){

		.navbar{
			background: #D45C46;
			padding: 10px 0 10px 0;
		}

		.navbar #logo{
			padding: 5px 0px 0 10px;
		}

		.navbar-inverse .navbar-nav .open .dropdown-menu > li > a{
			color: #FCF0E3;
		}

	}


	@media only screen and (max-width : 840px){

		.padding-Body{
			margin:0 auto;
			display: block;

		}
	}
	@media only screen and (min-width : 768px){
 
  		h1.jumbo{
		   	top: 35vh; 
		   	font-size: 3.5vw ;

		}


		.navbar{
			background: #D45C46;
			padding: 10px;
		}

		#logo{
  			width: 7em;
 			padding: 7px 0 0 0;
  		}


		.jumbotron {
			height: 400px;
		}

		.food-title {
			background: rgba(247,227,102,.8);
			padding: 10px 10px 10px 10px;
			overflow: hidden;
			max-width: 100%;
		}

		.navbar-inverse .navbar-nav .open .dropdown-menu > li > a{
			color: black;
		}
 
	}
 
	/* Medium Devices, Desktops */
	@media only screen and (min-width : 992px){
		 h1.jumbo{
		   	top: 30vh; 
		   	
		}
	}

	.jumbotron {
			height: 500px;
			max-height: 400px;
		}
 
 		
	}

	/* Large Devices, Wide Screens */
	@media only screen and (min-width : 1200px){
	
	}

